[package]
name = "se"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
regex = "1.11.1"
serde_json = { version = "1.0.140", optional = true }
unescape = "0.1.0"

[dev-dependencies]
test-case = "3.3.1"

[profile.release]
strip = "symbols"
lto = true

[features]
extract = ["dep:serde_json"]
